--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl"
 {% load staticfiles %}
 <head>
   <meta charset="UTF-8">
@@ -18,28 +18,30 @@
 
  <!-- Start of the navbar -->
 
- <nav class="white">
-   <div class="container">
-     <div class="nav-wrapper">
-       <a href="{% url 'home' %}" class="brand-logo">
-         <img src="{% static 'img/logo.png' %}" width="150" alt="logo">
-       </a>
-       <ul class="right hide-on-med-and-down small-dash pl-2">
-         <li><a href="#"><i class="fab fa-1x fa-instagram"></i></a></li>
-         <li><a href="#"><i class="fab fa-1x fa-facebook-square"></i></a></li>
-         <li><a href="#"><i class="fab fa-1x fa-linkedin"></i></a></li>
-       </ul>
-       <ul id="nav-mobile" class="right hide-on-med-and-down pr-2">
-         <li><a href="{% url 'home' %}">Home</a></li>
-         <li><a href="#">About us</a></li>
-         <li><a href="{% url 'service' %}">Services</a></li>
-         <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
-         <li><a href="#">Contact us</a></li>
-
-       </ul>
-     </div>
-   </div>
- </nav>
+<!-- Start of the navbar -->
+  <nav class="white">
+    <div class="container">
+        <div class="nav-wrapper">
+            <a href="{% url 'home' %}" class="brand-logo">
+                <img src="{% static 'img/logo.png' %}" width="150" alt="logo">
+            </a>
+            <ul class="left hide-on-med-and-down small-dash- pr-2">
+                <li><a href="#"><i class="fab fa-1x fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-1x fa-facebook-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-1x fa-linkedin"></i></a></li>
+            </ul>
+            <ul id="nav-mobile" class="left hide-on-med-and-down pl-2">
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="{% url 'service' %}">Services</a></li>
+                <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
+                <li><a href="{% url 'contact' %}">Contact us</a></li>
+                
+            </ul>
+        </div>
+    </div>
+  </nav>
+<!-- End of the navbar -->
 
  <!-- End of the navbar -->
   <!-- Start of the carousol -->
@@ -148,19 +150,18 @@
   <!-- Start of the technique section -->
   <div class="container section-padding-a">
     <div class="row flex" id="technique-section">
-      {% for tech in technique %}
-      <div class="col l2 no-border" data-aos="zoom-out">
-        <div class="technique center">
-          <img width="50" src="{{tech.image.url}}" alt="">
-          <span>Branding</span>
-        </div>
-      </div>
-      {% endfor %}
-    
       {% for ti in technique_info %}
       <div class="col l4 right-align">
         <h5>{{ti.title}}</h5>
         <span>{{ti.summary}}</span>
+      </div>
+      {% endfor %}
+      {% for tech in technique %}
+      <div class="col l2" data-aos="zoom-out">
+        <div class="technique center">
+          <img width="50" src="{{tech.image.url}}" alt="">
+          <span>Branding</span>
+        </div>
       </div>
       {% endfor %}
     </div>
