--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -35,7 +35,7 @@
                     <li><a href="#">About us</a></li>
                     <li><a href="{% url 'service' %}">Services</a></li>
                     <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="{% url 'contact' %}">Contact us</a></li>
 
                 </ul>
             </div>
