--- a/home/templates/home/project_detail.html
+++ b/home/templates/home/project_detail.html
@@ -29,7 +29,7 @@
         </ul>
         <ul id="nav-mobile" class="left hide-on-med-and-down pl-2">
           <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="#">About us</a></li>
+          <li><a href="{% url 'aboutus' %}">About us</a></li>
           <li><a href="{% url 'service' %}">Services</a></li>
           <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
           <li><a href="{% url 'contact' %}">Contact us</a></li>
