--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -41,9 +41,8 @@
 
   <!-- Start of the description -->
   <div class="row flex">
-    <div class="col l8" style="background-image: url('img/03.jpg'); background-size: cover;"></div>
-    <div class="col l4">
-      <div class="section-padding-a pr-3">
+    <div class="col l8">
+      <div class="section-padding-a pr-3 center">
         <h3>מיתוג</h3>
         <p class="light-dark-text"> הוא פשוט טקסט דמה של ענף ההדפס והקליע היה הטקסט המקובל בתעשייה מאז שנות ה, אז מדפסת
           לא ידועה לקחה מטען מסוג זה וערפה אותו כדי ליצור דגימה מהסוג.</p>
